# LicensePlateDetection

./: Contribution License Agreement.docx  README.md  Release Notes file.docx  mil_config.json  requirements.txt  setup_env.bat
ModelInference_wheel_files/: licenseplatedetection-0.0.1-py3-none-any.whl
milapi/: fastapi_caller.py  utils.py
milutils/: dataset_class_names.py  download_tensorflow_models.py  download_torch_models.py  generalutils.py  model_to_class_mapper.py
modelloader/: base_model_loader.py  licenseplatedetection_model_loader.py  licenseplatedetection_model_loader_bkp.py
py/: LicensePlateDetectionInference-0.0.1-py3-none-any.whl  pyproject.toml  requirements.txt
references/: imil_sample_input_json.txt
sampleinputoutput/: input.txt  output.txt
sharedfastapi/: api_utils.py
